[package]
name = "ybaas"
version = "0.0.14"
authors = ["Igor Gnatenko <ignatenkobrain@fedoraproject.org>", "Randy Barlow <randy@electronsweatshop.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/bowlofeggs/ybaas"
documentation = "https://docs.rs/ybaas"
description = """\
              Don't you love when you accidentally tap your Yubikey when you have your IRC client \
              in focus and you send 987947 into Libera? Want to be able to have that experience \
              without having to reach all the way over to your laptop's USB port? Don't want the \
              complexity of installing and using the yubibomb CLI tool? Now you can use yubibomb as
              a service!"""
keywords = ["yubikey", "random", "game", "yubibomb", "microservice"]
categories = ["authentication", "cryptography", "games"]
edition = "2021"

[dependencies]
yubibomb = "0.2"
warp = "0.3"

[dependencies.tokio]
version = "1.24"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
